# HarvestAmp

./: .gitignore  ANTIGRAVITY_TASKS.md  CONTINUATION_HANDOFF.md  README.md  pyproject.toml  streamlit_app.py
configs/: ams_report_mapping.yaml  human_review_rules.yaml
docs/: 01_PRODUCT_BRIEF.md  02_AGENT_ARCHITECTURE.md  03_FARM_PROFILES.md  04_DATA_SOURCES.md  05_AGENT_CONTRACTS.md  06_RISK_AND_HUMAN_REVIEW_POLICY.md  07_SAMPLE_SCENARIOS.md  08_EVALUATION_TESTS.md  09_MVP_SCOPE.md  10_BUILD_PLAN.md  AGENT_CONTRACT.md  AGENT_DATA_SOURCE_MAP.md  AGENT_DOMAIN_MAP.md  AGENT_HANDOFF_MATRIX.md  CHANGELOG.md  CHANGELOG_ENTRY_local_document_extraction.md  DECISION_LOG.md  DECISION_LOG_ENTRY_local_document_extraction.md  SUPERVISOR_ROUTING_MAP.md
fixtures/: data_observations.yaml  document_extraction_scenarios.yaml  grain_records.yaml  harvest_records.yaml  sales_records.yaml  scenarios.yaml  source_metadata.yaml
harvestamp/: __init__.py
schemas/: action_pack.schema.yaml  agent_finding.schema.yaml  audit_event.schema.yaml  common_defs.schema.yaml  connector_result.schema.yaml  data_observations.schema.yaml  document_extraction.schema.yaml  evidence_item.schema.yaml  farm_context_package.schema.yaml  farm_profile.schema.yaml  grain_bin_inventory.schema.yaml  grain_load_ticket.schema.yaml  harvest_event.schema.yaml  human_review.schema.yaml  inventory_item.schema.yaml  post_harvest_inventory.schema.yaml  quote.schema.yaml  recommendation.schema.yaml  sales_commitment.schema.yaml  sales_record.schema.yaml  scenario.schema.yaml  source_metadata.schema.yaml  (+2 more)
(+105 files in other folders)
